--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
  
  
 .container {
-    background-color: rgba(255, 255, 255, 0.527);
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
